# paperclip-telegram-file-delivery

./: .env.example  README.md  SECURITY.md  SKILL.md  _meta.json  import-contract.json  pyproject.toml
.github/workflows/: validate.yml
docs/: env-setup.md  install-checklist.md  paperclip-ui-install.md
docs/releases/: v1.0.0.md
references/: agent-instructions.md  operations.md  paperclip-integration.md
scripts/: validate.sh
skills/telegram-file-delivery/: README.md  SKILL.md  _meta.json  import-contract.json
skills/telegram-file-delivery/assets/: TELEGRAM-DELIVERY-OPERATING-MODEL.md
skills/telegram-file-delivery/docs/: guardrails.md  install-checklist.md  paperclip-ui-install.md  production-pack.md
skills/telegram-file-delivery/docs/releases/: v1.0.1.md
skills/telegram-file-delivery/examples/: attachments.json  comment.txt  package-comment.txt
skills/telegram-file-delivery/references/: agent-instructions.md  implementation-plan.md
skills/telegram-file-delivery/references/docs/: company-agent-pack.md  rollout.md  (+1 more)
skills/telegram-file-delivery/scripts/: telegram_delivery.py  validate.sh
skills/telegram-file-delivery/templates/: paperclip-agent-instructions.md
src/paperclip_telegram_delivery/: __init__.py  cli.py  dotenv_loader.py  filters.py  result.py  summary.py  workflow.py
templates/agents/: DELIVERY-AGENT.md  REVIEWER.md
templates/company/: AGENTS.md  HEARTBEAT.md
tests/: test_cli.py  test_config.py  test_dotenv_loader.py  test_filters.py  test_package_resolution.py  test_paperclip_packaged_script.py  test_triggers.py  test_workflow.py
(+7 files in other folders)
