[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperclip-telegram-delivery"
version = "1.0.0"
description = "Zero-install-friendly Telegram Bot API delivery helper for Paperclip workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenClaw" }]
dependencies = []

[project.scripts]
paperclip-telegram-send = "paperclip_telegram_delivery.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
